manifests/ipv4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipv4
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ipv4.is
    secretName: ipv4-is-tls

  rules:
  - host: ipv4.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ipv4
            port:
              number: 80
